Adicionar alt text descritivo em todas as imagens decorativas para melhorar SEO

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                 <div class="mission-grid">
                     <div data-w-id="darkyn09" style="opacity: 1;" class="mission-left">
                         <div class="mission-title">
-                            <img src="images/plus.png"  alt="" class="mission-plus" />
+                            <img src="images/plus.png"  alt="Plus icon" class="mission-plus" />
                             <h4 class="mission-heading">
                                 Our<br />
                                 Mission
@@ -645,7 +645,7 @@
                                     <h2 class="blog-heading">DeFi Marketing Excellence</h2>
                                     <div class="blog-author-and-arrow">
                                         <img  src="images/author3.jpeg" alt="Wevolv3 Author" class="blog-author" />
-                                        <div class="blog-arrow"><img  src="images/bend-up-right-light.png" alt="" class="blog-arrow-icon" /></div>
+                                        <div class="blog-arrow"><img  src="images/bend-up-right-light.png" alt="Arrow icon" class="blog-arrow-icon" /></div>
                                     </div>
                                 </div>
                                 <img
@@ -665,7 +665,7 @@
                                     <h2 class="blog-heading">Modular Advertising Solutions</h2>
                                     <div class="blog-author-and-arrow">
                                         <img  src="images/author1.jpeg" alt="Wevolv3 Author" class="blog-author" />
-                                        <div class="blog-arrow"><img  src="images/bend-up-right-light.png" alt="" class="blog-arrow-icon" /></div>
+                                        <div class="blog-arrow"><img  src="images/bend-up-right-light.png" alt="Arrow icon" class="blog-arrow-icon" /></div>
                                     </div>
                                 </div>
                                 <img
@@ -695,23 +695,23 @@
                     <div data-w-id="darkyn04" class="socials">
                         <a href="https://x.com/wevolv3" target="_blank" class="social-link w-inline-block">
                             <div class="social-text">X</div>
-                            <img src="images/arrow-down-right.png"  alt="" class="social-arrow" />
+                            <img src="images/arrow-down-right.png"  alt="External link arrow" class="social-arrow" />
                         </a>
                         <a href="https://www.linkedin.com/company/wevol3-web3-marketing" target="_blank" class="social-link w-inline-block">
                             <div class="social-text">linkedin</div>
-                            <img src="images/arrow-down-right.png"  alt="" class="social-arrow" />
+                            <img src="images/arrow-down-right.png"  alt="External link arrow" class="social-arrow" />
                         </a>
                         <a href="https://wevolv3.com" target="_blank" class="social-link w-inline-block">
                             <div class="social-text">website</div>
-                            <img src="images/arrow-down-right.png"  alt="" class="social-arrow" />
+                            <img src="images/arrow-down-right.png"  alt="External link arrow" class="social-arrow" />
                         </a>
                         <a href="https://t.me/wevolv3" target="_blank" class="social-link w-inline-block">
                             <div class="social-text">telegram</div>
-                            <img src="images/arrow-down-right.png"  alt="" class="social-arrow" />
+                            <img src="images/arrow-down-right.png"  alt="External link arrow" class="social-arrow" />
                         </a>
                         <a href="https://wevolv3.com/blog" class="social-link last-social w-inline-block">
                             <div class="social-text">blog</div>
-                            <img src="images/arrow-down-right.png"  alt="" class="social-arrow" />
+                            <img src="images/arrow-down-right.png"  alt="External link arrow" class="social-arrow" />
                         </a>
                     </div>
                 </div>
@@ -730,7 +730,7 @@
                         2025 Wevolv3. All rights reserved.
                     </div>
                     <div data-w-id="darkyn06" class="right-copyright">
-                        <a href="#home" class="backtotop w-inline-block"><img  src="images/back-top_1back-top.png" alt="" /></a>
+                        <a href="#home" class="backtotop w-inline-block"><img  src="images/back-top_1back-top.png" alt="Back to top" /></a>
                     </div>
                 </div>
             </div>
