--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                         <div class="service-nunmber">05</div>
                         <div class="service-text">Design & Motion</div>
                         <img
-                            src="images/growth.png"
+                            src="images/design.png"
                             
                             alt="Design & Motion"
                             class="service-img"
