Substituir imagem de Growth Hacking por GROWTH.png com zoom nos foguetes

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                         <div class="service-nunmber">03</div>
                         <div class="service-text">Growth Hacking</div>
                         <img
-                            src="images/growthhacking.png"
+                            src="images/growth.png"
                             
                             alt="Growth Hacking"
                             class="service-img"
