--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                         <div class="service-nunmber">02</div>
                         <div class="service-text">ADS PLACEMENT</div>
                         <img
-                            src="images/adspaidtraffic.png"
+                            src="images/ads.png"
                             
                             alt="ADS PLACEMENT"
                             class="service-img"
