Corrigir caminho da imagem ADS PLACEMENT para ADS.png

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                         <div class="service-nunmber">02</div>
                         <div class="service-text">ADS PLACEMENT</div>
                         <img
-                            src="images/ads.png"
+                            src="images/ADS.png"
                             
                             alt="ADS PLACEMENT"
                             class="service-img"
