Adicionar lazy loading nos logos de parceiros do hero

--- a/index.html
+++ b/index.html
@@ -232,16 +232,16 @@
                 </div>
                 <div class="hero-partners">
                     <div data-w-id="darkyn23" class="hero-partners-moving">
-                        <img src="images/1.png"  width="238.5" alt="Forbes - Media Partner" class="hero-client-logo" />
-                        <img src="images/2.png"  width="238.5" alt="Bitcoin.com - Media Partner" class="hero-client-logo" />
-                        <img src="images/3.png"  width="238.5" alt="Cointelegraph - Media Partner" class="hero-client-logo" />
-                        <img src="images/5.png"  width="238.5" alt="CoinDesk - Media Partner" class="hero-client-logo" />
-                        <img src="images/6.png"  width="238.5" alt="Binance - Media Partner" class="hero-client-logo" />
-                        <img src="images/7.png"  width="238.5" alt="CoinMarketCap - Media Partner" class="hero-client-logo" />
-                        <img src="images/4.png"  width="238.5" alt="Skkicmotion - Media Partner" class="hero-client-logo" />
-                        <img src="images/1.png"  width="238.5" alt="Forbes - Media Partner" class="hero-client-logo" />
-                        <img src="images/2.png"  width="238.5" alt="Bitcoin.com - Media Partner" class="hero-client-logo" />
-                        <img src="images/3.png"  width="238.5" alt="Cointelegraph - Media Partner" class="hero-client-logo" />
+                        <img src="images/1.png"  width="238.5" alt="Forbes - Media Partner" class="hero-client-logo" loading="lazy" />
+                        <img src="images/2.png"  width="238.5" alt="Bitcoin.com - Media Partner" class="hero-client-logo" loading="lazy" />
+                        <img src="images/3.png"  width="238.5" alt="Cointelegraph - Media Partner" class="hero-client-logo" loading="lazy" />
+                        <img src="images/5.png"  width="238.5" alt="CoinDesk - Media Partner" class="hero-client-logo" loading="lazy" />
+                        <img src="images/6.png"  width="238.5" alt="Binance - Media Partner" class="hero-client-logo" loading="lazy" />
+                        <img src="images/7.png"  width="238.5" alt="CoinMarketCap - Media Partner" class="hero-client-logo" loading="lazy" />
+                        <img src="images/4.png"  width="238.5" alt="Skkicmotion - Media Partner" class="hero-client-logo" loading="lazy" />
+                        <img src="images/1.png"  width="238.5" alt="Forbes - Media Partner" class="hero-client-logo" loading="lazy" />
+                        <img src="images/2.png"  width="238.5" alt="Bitcoin.com - Media Partner" class="hero-client-logo" loading="lazy" />
+                        <img src="images/3.png"  width="238.5" alt="Cointelegraph - Media Partner" class="hero-client-logo" loading="lazy" />
                     </div>
                 </div>
             </div>
