Alterar nome do serviço de PR (Press Office) para CRYPTO PR & MEDIA

--- a/index.html
+++ b/index.html
@@ -357,11 +357,11 @@
                     </div>
                     <div data-w-id="darkyn17" style="opacity: 0;" class="services-item">
                         <div class="service-nunmber">08</div>
-                        <div class="service-text">PR (Press Office)</div>
+                        <div class="service-text">CRYPTO PR & MEDIA</div>
                         <img
                             src="images/pr.jpg"
                             loading="lazy"
-                            alt="PR (Press Office)"
+                            alt="CRYPTO PR & MEDIA"
                             class="service-img"
                         />
                     </div>
