Atualizar link do Twitter/X para @wevolv3_media
- Atualizado link do Twitter em todas as páginas HTML
- Atualizado Schema.org JSON-LD no index.html
- Atualizado README.md
- Adicionado script 'dev' no package.json para servidor local

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -190,7 +190,7 @@
         <a data-w-id="darkyn02" href="mailto:contact@wevolv3.com" class="mail-link">contact@wevolv3.com</a>
         <a data-w-id="darkyn03" href="https://t.me/wevolv3" target="_blank" class="phone-link">@wevolv3</a>
         <div data-w-id="darkyn04" class="socials">
-          <a href="https://x.com/wevolv3" target="_blank" class="social-link w-inline-block">
+          <a href="https://x.com/wevolv3_media" target="_blank" class="social-link w-inline-block">
             <div class="social-text">X</div>
             <img src="images/arrow-down-right.png" alt="" class="social-arrow" />
           </a>
