--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
                         <a href="mailto:contact@wevolv3.com" class="contact-link contact-last-link">contact@wevolv3.com</a>
 
                         <div class="footer-socials contact-socials">
-                            <a data-w-id="darkyn37" href="https://x.com/wevolv3" target="_blank" class="social-item w-inline-block">
+                            <a data-w-id="darkyn37" href="https://x.com/wevolv3_media" target="_blank" class="social-item w-inline-block">
                                 <div class="social-text-2">X</div>
                                 <img  src="images/arrow3_1arrow3.png" alt="Arrow icon" class="social-arrow-2" />
                             </a>
@@ -218,7 +218,7 @@
                     <a data-w-id="darkyn02" href="mailto:contact@wevolv3.com" class="mail-link">contact@wevolv3.com</a>
                     <a data-w-id="darkyn03" href="https://t.me/wevolv3" target="_blank" class="phone-link">@wevolv3</a>
                     <div data-w-id="darkyn04" class="socials">
-                        <a href="https://x.com/wevolv3" target="_blank" class="social-link w-inline-block">
+                        <a href="https://x.com/wevolv3_media" target="_blank" class="social-link w-inline-block">
                             <div class="social-text">X</div>
                             <img src="images/arrow-down-right.png"  alt="" class="social-arrow" />
                         </a>
