--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           "logo": "https://wevolv3.com/images/LOGO.PNG",
           "description": "Web3 Marketing & Modular Advertising Agency. Strategic, modular marketing. Attention into results.",
           "sameAs": [
-            "https://x.com/wevolv3",
+            "https://x.com/wevolv3_media",
             "https://www.linkedin.com/company/wevol3-web3-marketing",
             "https://t.me/wevolv3"
           ],
@@ -703,7 +703,7 @@
                     <a data-w-id="darkyn02" href="mailto:contact@wevolv3.com" class="mail-link">contact@wevolv3.com</a>
                     <a data-w-id="darkyn03" href="https://t.me/wevolv3" target="_blank" class="phone-link">@wevolv3</a>
                     <div data-w-id="darkyn04" class="socials">
-                        <a href="https://x.com/wevolv3" target="_blank" class="social-link w-inline-block">
+                        <a href="https://x.com/wevolv3_media" target="_blank" class="social-link w-inline-block">
                             <div class="social-text">X</div>
                             <img src="images/arrow-down-right.png"  alt="External link arrow" class="social-arrow" />
                         </a>
