--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8" />
         <meta content="width=device-width, initial-scale=1" name="viewport" />
 
-        <title>Wevolv3 - Web3 Marketing & Modular Advertising Agency</title>
+        <title>Web3 Marketing Agency for Crypto & Blockchain Projects Worldwide | Wevolv3</title>
         <meta name="description" content="Wevolv3 is a Web3 Marketing & Modular Advertising Agency. We help crypto, DeFi, and blockchain projects grow through innovative marketing strategies and targeted campaigns.">
         <meta name="keywords" content="Web3 marketing, crypto marketing, DeFi marketing, blockchain marketing, token marketing, NFT marketing, crypto advertising, Web3 agency">
         <meta name="author" content="Wevolv3">
@@ -20,7 +20,7 @@
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://wevolv3.com/">
-        <meta property="og:title" content="Wevolv3 - Web3 Marketing & Modular Advertising Agency">
+        <meta property="og:title" content="Web3 Marketing Agency for Crypto & Blockchain Projects Worldwide | Wevolv3">
         <meta property="og:description" content="Strategic, modular marketing. Attention into results. We help crypto, DeFi, and blockchain projects grow through innovative marketing strategies.">
         <meta property="og:image" content="https://wevolv3.com/images/LOGO.PNG">
         <meta property="og:image:width" content="1200">
@@ -31,7 +31,7 @@
         <!-- Twitter Card -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:url" content="https://wevolv3.com/">
-        <meta name="twitter:title" content="Wevolv3 - Web3 Marketing & Modular Advertising Agency">
+        <meta name="twitter:title" content="Web3 Marketing Agency for Crypto & Blockchain Projects Worldwide | Wevolv3">
         <meta name="twitter:description" content="Strategic, modular marketing. Attention into results. We help crypto, DeFi, and blockchain projects grow through innovative marketing strategies.">
         <meta name="twitter:image" content="https://wevolv3.com/images/LOGO.PNG">
         
