Atualizar cargo de David Oware para KOL Manager

--- a/about.html
+++ b/about.html
@@ -263,7 +263,7 @@
                     </div>
                     <div class="team-item">
                         <div class="team-image-wrapp">
-                            <img alt="David Oware - Business Developer" src="images/team2.png"  class="team-img" />
+                            <img alt="David Oware - KOL Manager" src="images/team2.png"  class="team-img" />
                             <div class="team-scials">
                                 <a href="https://x.com/ajibodav" target="_blank" class="social-link-2 w-inline-block">
                                     <svg class="social-image" width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -274,7 +274,7 @@
                         </div>
                         <div class="team-details">
                             <h4 class="team-heading">David Oware</h4>
-                            <div class="team-job">Business Developer</div>
+                            <div class="team-job">KOL Manager</div>
                         </div>
                     </div>
                     <div class="team-item">
