fix: corrigir problemas de indexaÃ§Ã£o do Google Search Console
- Adicionar canonical dinÃ¢mico na Edge Function para singleblog
- Corrigir canonical em singleblog.html (dinÃ¢mico baseado no slug)
- Corrigir canonical em singlework.html (dinÃ¢mico baseado no slug)
- Adicionar documentaÃ§Ã£o de anÃ¡lise e correÃ§Ãµes implementadas

Resolve problemas de indexaÃ§Ã£o:
- PÃ¡gina alternativa com tag canÃ´nica adequada (1 pÃ¡gina)
- Rastreada mas nÃ£o indexada no momento (2 pÃ¡ginas)

--- a/singleblog.html
+++ b/singleblog.html
@@ -29,6 +29,20 @@
         
         <!-- Canonical URL (will be updated dynamically) -->
         <link rel="canonical" id="canonical-url" href="https://wevolv3.com/blog">
+        <script>
+            // Set canonical URL immediately (before page load) for SEO
+            (function() {
+                const urlParams = new URLSearchParams(window.location.search);
+                const slug = urlParams.get('slug');
+                if (slug) {
+                    const canonicalUrl = `https://wevolv3.com/singleblog.html?slug=${encodeURIComponent(slug)}`;
+                    const canonicalEl = document.getElementById('canonical-url');
+                    if (canonicalEl) {
+                        canonicalEl.href = canonicalUrl;
+                    }
+                }
+            })();
+        </script>
         
         <!-- Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-E7E4GJ0QP9"></script>
